--- a/k8s/webserver-deploy.yml
+++ b/k8s/webserver-deploy.yml
@@ -2,24 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: mysql
-  name: mysql
+    app: webserver
+  name: webserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      app: webserver
   template:
     metadata:
       labels:
-        app: mysql
+        app: webserver
     spec:
       containers:
-      - image: mysql:5.7
-        name: mysql
+      - image: seattleslough/webserver
+        name: webserver
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: P12345
+        - name: MYSQL_DATABASE_HOST
+          value: mysql
         - name: MYSQL_DATABASE
           value: phonebook
         - name: MYSQL_USER
@@ -27,5 +27,5 @@ spec:
         - name: MYSQL_PASSWORD
           value: Clarusway_1
         ports:
-        - containerPort: 3306
+        - containerPort: 80
         resources: {}
