--- a/k8s/mysql-deploy.yml
+++ b/k8s/mysql-deploy.yml
@@ -21,15 +21,11 @@ spec:
       containers:
       - image: mysql:5.7
         name: mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: P12345
-        - name: MYSQL_DATABASE
-          value: phonebook
-        - name: MYSQL_USER
-          value: clarus
-        - name: MYSQL_PASSWORD
-          value: Clarusway_1
+        envFrom:
+        - configMapRef:
+            name: mysql-cm
+        - secretRef:
+            name: mysql-secret
         volumeMounts:
         - mountPath: "/var/lib/mysql"
           name: mysql-pv-storage
