--- a/k8s/webserver-deploy.yml
+++ b/k8s/webserver-deploy.yml
@@ -17,15 +17,11 @@ spec:
       containers:
       - image: seattleslough/webserver
         name: webserver
-        env:
-        - name: MYSQL_DATABASE_HOST
-          value: mysql
-        - name: MYSQL_DATABASE
-          value: phonebook
-        - name: MYSQL_USER
-          value: clarus
-        - name: MYSQL_PASSWORD
-          value: Clarusway_1
+        envFrom:
+        - configMapRef:
+            name: mysql-cm
+        - secretRef:
+            name: mysql-secret
         ports:
         - containerPort: 80
         resources: {}
